--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.2.5
 dj-database-url==0.5.0
-Django==2.2.11
+Django==3.0.4
 django-classy-tags==1.0.0
 django-cms==3.7.1
 django-filer==1.7.0
@@ -25,6 +25,7 @@ djangocms-style==2.2.0
 djangocms-text-ckeditor==3.8.0
 djangocms-video==2.2.0
 easy-thumbnails==2.7
+gunicorn==20.0.4
 html5lib==1.0.1
 Jinja2==2.11.1
 MarkupSafe==1.1.1
