--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,11 @@ gunicorn==20.0.4
 html5lib==1.0.1
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+numpy==1.18.2
+pandas==1.0.3
 Pillow==7.0.0
 psycopg2==2.8.4
+python-dateutil==2.8.1
 python-dotenv==0.12.0
 pytz==2019.3
 six==1.14.0
