--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.5
 certifi==2019.11.28
+chardet==3.0.4
 cloudinary==1.20.0
 dj-database-url==0.5.0
 Django==3.0.4
@@ -7,13 +8,17 @@ django-heroku==0.3.1
 easy-thumbnails==2.7
 gunicorn==20.0.4
 html5lib==1.0.1
+idna==2.9
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+percy-python-selenium==0.1.2
 Pillow==7.1.1
 psycopg2==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 pytz==2019.3
+requests==2.23.0
+selenium==3.141.0
 six==1.14.0
 sqlparse==0.3.1
 tzlocal==2.0.0
