--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.2.5
 certifi==2019.11.28
 chardet==3.0.4
 cloudinary==1.20.0
+codecov==2.0.22
+coverage==5.1
 dj-database-url==0.5.0
 Django==3.0.4
 django-heroku==0.3.1
