--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ coverage==5.1
 decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.4
+django-filter==2.2.0
 django-heroku==0.3.1
 django-webpack-loader==0.7.0
 easy-thumbnails==2.7
