--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "autoprefixer": "^9.7.6",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.1.0",
+        "brotli-webpack-plugin": "^1.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^3.1.0",
         "css-loader": "^3.5.3",
