--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "dateformat": "^3.0.3",
         "graphql": "^15.0.0",
         "i": "^0.3.6",
+        "imagesloaded": "^4.1.4",
         "masonry-layout": "^4.2.2",
         "mdbreact": "^4.26.0",
         "npm": "^6.14.5",
@@ -45,7 +46,7 @@
         "react-masonry-component": "^6.2.1",
         "react-router-dom": "^5.1.2",
         "react-typing-animation": "^1.6.2",
-        "simple-react-lightbox": "^2.8.0-5"
+        "simple-react-lightbox": "^2.8.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
