--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
   "homepage": "https://github.com/kvdomingo/upirisorg#readme",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "aos": "^2.3.4",
     "apollo-boost": "^0.4.9",
     "bootstrap-css-only": "^4.4.1",
-    "cloudinary-react": "^1.6.6",
+    "cloudinary-react": "^1.6.7",
     "dateformat": "^3.0.3",
     "graphql": "^15.3.0",
     "i": "^0.3.6",
     "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.2",
     "mdbreact": "^4.26.0",
-    "npm": "^6.14.5",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
-    "react-lorem-ipsum": "^1.4.5",
+    "react-lorem-ipsum": "^1.4.7",
     "react-masonry-component": "^6.2.1",
     "react-router-dom": "^5.1.2",
     "react-typing-animation": "^1.6.2",
     "simple-react-lightbox": "^2.8.0",
-    "snyk": "^1.402.0"
+    "snyk": "^1.413.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -63,17 +63,17 @@
     "babel-loader": "^8.1.0",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^4.0.0",
-    "css-loader": "^3.5.3",
+    "compression-webpack-plugin": "^4.0.1",
+    "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
@@ -83,25 +83,26 @@
     "robotstxt-webpack-plugin": "^7.0.0",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
+    "style-loader": "^1.3.0",
     "ttf-loader": "^1.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "zlib": "^1.0.5"
   },
   "babel": {
     "presets": [
-        "@babel/preset-env", "@babel/preset-react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-syntax-dynamic-import"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-syntax-dynamic-import"
     ]
   },
   "eslintConfig": {
